# 2024-Compilers

./: 1-lexer-antlr-20240306.md
antlr/simpleexpr/: SimpleExpr.g4
lexer-handwritten/: CMakeLists.txt  main.cpp
